# ya-test

./: CMakeLists.txt  README.md
include/: StaticAllocator.h
include/tau/: complilers.h  misc.h  tau.h  types.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
